CKS/definition-files/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: test
  name: test
spec:
  replicas: 2
  selector:
    matchLabels:
      run: test
  template:
    metadata:
      labels: 
        run: test
    spec:
      containers:
      - image: nginx:latest
        name: test
      serviceAccountName: build-robot
      automountServiceAccountToken: false
