CKS/definition-files/netpol.yaml
# deny access to metadata server at 123.123.123.123:
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
 name: metadata-server
spec:
 podSelector:
   matchLabels:
    <>: ""
 policyTypes:
  - Egress
 egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 123.123.123.123/32
